# MindCraft

./: README.md  agent.py  pyproject.toml  vector.py
chroma_langchain_db/: chroma.sqlite3
