[project]
name = "mindcraft"
version = "0.1.0"
description = ""
authors = [
    {name = "Ashutosh Panda",email = "ashutoshpanda2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain (>=0.3.22,<0.4.0)",
    "langchain-ollama (>=0.3.0,<0.4.0)",
    "langchain-chroma (>=0.2.2,<0.3.0)"
]

[tool.poetry]
packages = [{include = "mindcraft", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
